data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2200.wast
;; 10. **Test 10: Invalid Operand Type for `br_table`**    - Description: Introduce an invalid operand type (e.g., non-`i32`) for `br_table` in a loop, checking how type checks are managed.    - Specific Constraint: Tests type enforcement and error handling for `br_table` operands.    - Infinite Loop Relation: Improper type handling might cause the engine to incorrectly attempt to complete a loop, leading to infinite behavior.

(assert_invalid
  (module
    (func $invalid-operand-type
      (block (br_table 0 1.0))
    )
  )
  "type mismatch"
)